crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@406.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_add VALUES (9,6,'54863480.39378734225015137845671346015520435061071252892396685718794832880965812803098645730572474084523997120024743452620396345637401505220786389930600883087012615993343976556472498552535317826554614696684732913955544753638726438705858481670766245958647367500212800073774509075408148134050353551558174813940258910304990570172170811882520915334358633');"
---
InsertStmt@0..390
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_add"
  Whitespace@23..24 " "
  SelectStmt@24..388
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..388
      AConst@32..33
        Iconst@32..33 "9"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "6"
      Ascii44@35..36 ","
      AConst@36..388
        Sconst@36..388 "'54863480.39378734225 ..."
  Ascii41@388..389 ")"
  Ascii59@389..390 ";"

